Fixed spacing of line-breaking collection links
SRFCMSAL-2740

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -358,11 +358,15 @@ $background-overlap-wide: 50px;
   }
 
   @include tablet-up {
-    margin: 16px 32px 16px;
+    margin: 16px 32px 8px;
+
+    .collection__link-item {
+      margin-bottom: 8px;
+    }
   }
 
   @include desktop-wide {
-    margin: 20px 40px 20px;
+    margin: 20px 40px 12px;
   }
 }
 
